# simple-webserver

./: Cargo.toml  README.md
html/: bunny.webm  index.html  phptest.php
html/subdirectory/: index.html  other_page.html
src/: lib.rs  main.rs
src/lib/: endpoints.rs  lib.rs  regex.rs
