[package]
name = "simple-webserver"
version = "0.1.0"
authors = ["Jeremy Meadows <jeremybmeadows@gmail.com>"]
edition = "2018"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "libcrypt"
path = "src/lib/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "regex"
path = "src/lib/regex.rs"
